--- a/styles/index.scss
+++ b/styles/index.scss
@@ -24,7 +24,7 @@
   font-size: $main-font-size;
   font-weight: normal;
   font-style: normal;
-  // box-sizing: border-box;
+  box-sizing: border-box;
 
   font-family: courier-std, Courier, monospace; // Alternative: "Inconsolata"
   color: $text-color;
@@ -154,13 +154,13 @@ footer a {
 }
 
 .short-animation {
-  transition: background-size 0.5s ease;
+  transition: background-size 0.25s ease;
 }
 .med-animation {
-  transition: background-size 1s ease;
+  transition: background-size 0.7s ease;
 }
 .long-animation {
-  transition: background-size 1.5s ease;
+  transition: background-size 1.2s ease;
 }
 
 .underline-mask:hover,
