--- a/styles/index.scss
+++ b/styles/index.scss
@@ -58,21 +58,21 @@ body {
   grid-template-rows: auto;
   column-gap: 22px;
   row-gap: $medium-space;
-  align-items: end;
+  // align-items: end;
 
   h2 {
     padding-top: 18px;
-
-    .project-subtitle {
-      // font-family: courier-std, Courier, monospace;
-      font-style: italic;
-      // font-size: 17px;
-    }
   }
 
   img {
     width: 100%;
   }
+}
+
+.project-subtitle {
+  // font-family: courier-std, Courier, monospace;
+  font-style: italic;
+  // font-size: 17px;
 }
 
 p {
@@ -92,14 +92,6 @@ nav a {
 a {
   text-decoration: none;
 
-  // animation
-  line-height: 1.4;
-  padding-bottom: 5px;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 29.18 15'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:none;stroke:%23f0efef;stroke-miterlimit:10;stroke-width:5px;%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M0,2.5c7.3,0,7.3,10,14.59,10S21.89,2.5,29.18,2.5'/%3E%3C/svg%3E");
-  background-repeat: repeat-x;
-  background-position: 2px 1em;
-  background-size: 13px 7px;
-
   // Add arrow after external links
   &[target="_blank"]::after {
     display: inline-block;
@@ -111,62 +103,75 @@ a {
     width: 1.1em;
     height: 1.1em;
   }
-
-  &.pink {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 29.18 15'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:none;stroke:%23#{$pink-no-hash};stroke-miterlimit:10;stroke-width:5px;%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M0,2.5c7.3,0,7.3,10,14.59,10S21.89,2.5,29.18,2.5'/%3E%3C/svg%3E");
-  }
-
-  &.red {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 29.18 15'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:none;stroke:%23#{$red-no-hash};stroke-miterlimit:10;stroke-width:5px;%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M0,2.5c7.3,0,7.3,10,14.59,10S21.89,2.5,29.18,2.5'/%3E%3C/svg%3E");
-  }
-
-  &.yellow {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 29.18 15'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:none;stroke:%23#{$yellow-no-hash};stroke-miterlimit:10;stroke-width:5px;%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M0,2.5c7.3,0,7.3,10,14.59,10S21.89,2.5,29.18,2.5'/%3E%3C/svg%3E");
-  }
-  &.green {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 29.18 15'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:none;stroke:%23#{$green-no-hash};stroke-miterlimit:10;stroke-width:5px;%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M0,2.5c7.3,0,7.3,10,14.59,10S21.89,2.5,29.18,2.5'/%3E%3C/svg%3E");
-  }
-  &.blue {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 29.18 15'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:none;stroke:%23#{$blue-no-hash};stroke-miterlimit:10;stroke-width:5px;%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M0,2.5c7.3,0,7.3,10,14.59,10S21.89,2.5,29.18,2.5'/%3E%3C/svg%3E");
-  }
 }
 
-footer a {
-  background-position: 2px 1.2em;
+.underline {
+  line-height: 1.8;
+  padding-bottom: 1em;
+  color: inherit; // allows span/link's text to inherit color
+
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 29.18 15'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:none;stroke:%23f0efef;stroke-miterlimit:10;stroke-width:5px;%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M0,2.5c7.3,0,7.3,10,14.59,10S21.89,2.5,29.18,2.5'/%3E%3C/svg%3E");
+  background-repeat: repeat-x;
+  background-position: 2px 1.3em;
+  // background-position: 2px 1.6em; // use this amount for .underline when not on a span
   background-size: 13px 7px;
 }
 
+.underline.pink,
+.pink .underline {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 29.18 15'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:none;stroke:%23#{$pink-no-hash};stroke-miterlimit:10;stroke-width:5px;%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M0,2.5c7.3,0,7.3,10,14.59,10S21.89,2.5,29.18,2.5'/%3E%3C/svg%3E");
+}
+
+.underline.red,
+.red .underline {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 29.18 15'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:none;stroke:%23#{$red-no-hash};stroke-miterlimit:10;stroke-width:5px;%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M0,2.5c7.3,0,7.3,10,14.59,10S21.89,2.5,29.18,2.5'/%3E%3C/svg%3E");
+}
+
+.underline.yellow,
+.yellow .underline {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 29.18 15'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:none;stroke:%23#{$yellow-no-hash};stroke-miterlimit:10;stroke-width:5px;%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M0,2.5c7.3,0,7.3,10,14.59,10S21.89,2.5,29.18,2.5'/%3E%3C/svg%3E");
+}
+.underline.green,
+.green .underline {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 29.18 15'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:none;stroke:%23#{$green-no-hash};stroke-miterlimit:10;stroke-width:5px;%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M0,2.5c7.3,0,7.3,10,14.59,10S21.89,2.5,29.18,2.5'/%3E%3C/svg%3E");
+}
+.underline.blue,
+.blue .underline {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 29.18 15'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:none;stroke:%23#{$blue-no-hash};stroke-miterlimit:10;stroke-width:5px;%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M0,2.5c7.3,0,7.3,10,14.59,10S21.89,2.5,29.18,2.5'/%3E%3C/svg%3E");
+}
+
+// TODO: Clear background-image under image part of link
+
 .underline-mask {
+  // display: inline-block;
   text-decoration: none;
-  line-height: 1.4;
-  position: relative;
-  padding-bottom: 5px;
-  color: inherit;
+  // position: relative;
+  padding-bottom: 1em;
+
+  color: inherit; // allows span/link's text to inherit color
 
   background-image: linear-gradient($background-color, $background-color);
+  // background-image: linear-gradient(
+  //   rgba(189, 15, 205, 0.5),
+  //   rgba(189, 15, 205, 0.5)
+  // );
+
   background-repeat: repeat-x;
   background-repeat: no-repeat;
-  background-position: 100% 1em;
+  background-position: 100% 1.2em;
   background-size: 100% 100%;
 
   z-index: 1;
-  // transition: background-size 0.5s ease;
 }
 
 .short-animation {
-  transition: background-size 0.25s ease;
+  transition: background-size 0.3s ease;
 }
 .med-animation {
-  transition: background-size 0.7s ease;
+  transition: background-size 0.6s ease;
 }
 .long-animation {
   transition: background-size 1.2s ease;
-}
-
-.underline-mask:hover,
-.underline-mask:focus,
-.underline-mask:active {
-  background-size: 0 100%;
 }
 
 .screenreader-text {
@@ -181,19 +186,24 @@ footer a {
 footer a {
   display: inline-block;
   margin-bottom: $small-space;
-  text-decoration: none;
-
-  // alternative (doesn't work for IE):
-  // display: block;
-  // width: max-content;
+  // text-decoration: none;
 }
 
-// a:focus,
-.selected .underline-mask,
-.back .underline-mask {
-  // text-decoration: underline;
-  // text-decoration-style: wavy;
-  // text-decoration-thickness: 2px;
+// .underline {
+//   background-position: 2px 1.6em;
+//   background-size: 13px 7px;
+// }
+
+a:hover .underline-mask,
+.underline:active .underline-mask,
+.underline:focus .underline-mask,
+.selected .underline-mask//,
+// .underline-mask:hover,
+// .underline-mask:focus,
+// .underline-mask:active,
+// .selected .underline-mask,
+// .back .underline-mask
+{
   background-size: 0 100%;
 }
 
