--- a/styles/index.scss
+++ b/styles/index.scss
@@ -115,6 +115,8 @@ a {
   background-position: 2px 1.3em;
   // background-position: 2px 1.6em; // use this amount for .underline when not on a span
   background-size: 13px 7px;
+
+  transition: background-position 0.3s ease;
 }
 
 .underline.pink,
@@ -140,22 +142,13 @@ a {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 29.18 15'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:none;stroke:%23#{$blue-no-hash};stroke-miterlimit:10;stroke-width:5px;%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M0,2.5c7.3,0,7.3,10,14.59,10S21.89,2.5,29.18,2.5'/%3E%3C/svg%3E");
 }
 
-// TODO: Clear background-image under image part of link
-
 .underline-mask {
-  // display: inline-block;
   text-decoration: none;
-  // position: relative;
   padding-bottom: 1em;
 
   color: inherit; // allows span/link's text to inherit color
 
   background-image: linear-gradient($background-color, $background-color);
-  // background-image: linear-gradient(
-  //   rgba(189, 15, 205, 0.5),
-  //   rgba(189, 15, 205, 0.5)
-  // );
-
   background-repeat: repeat-x;
   background-repeat: no-repeat;
   background-position: 100% 1.2em;
@@ -183,27 +176,27 @@ a {
   overflow: hidden;
 }
 
-footer a {
-  display: inline-block;
-  margin-bottom: $small-space;
-  // text-decoration: none;
+footer {
+  a {
+    display: inline-block;
+    margin-bottom: $small-space;
+  }
 }
 
-// .underline {
-//   background-position: 2px 1.6em;
-//   background-size: 13px 7px;
-// }
+.underline-perm {
+  &:hover,
+  &:active,
+  &:focus {
+    background-position: 2px 1.5em;
+  }
+}
 
 a:hover .underline-mask,
+a:active .underline-mask,
+a:focus .underline-mask,
 .underline:active .underline-mask,
 .underline:focus .underline-mask,
-.selected .underline-mask//,
-// .underline-mask:hover,
-// .underline-mask:focus,
-// .underline-mask:active,
-// .selected .underline-mask,
-// .back .underline-mask
-{
+.selected .underline-mask {
   background-size: 0 100%;
 }
 
@@ -260,12 +253,6 @@ a:hover .underline-mask,
 .hidden {
   display: none;
 }
-
-// .back {
-//   color: $pink;
-//   text-decoration: underline;
-//   text-decoration-style: wavy;
-// }
 
 @media only screen and (max-width: 1280px) {
   * {
