--- a/styles/index.css
+++ b/styles/index.css
@@ -185,6 +185,60 @@ a:focus .underline-mask,
   z-index: -1;
   font-family: "Prosto One", "Inconsolata", courier-std, Courier;
   font-size: 32px;
+  cursor: pointer;
+}
+
+.rainbow {
+  -webkit-animation: changeColor ease-in-out;
+          animation: changeColor ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+@-webkit-keyframes changeColor {
+  0% {
+    color: #e225e5;
+  }
+  20% {
+    color: #c90d0d;
+  }
+  40% {
+    color: #ffd84d;
+  }
+  60% {
+    color: #0dc941;
+  }
+  80% {
+    color: #57a4ff;
+  }
+  100% {
+    color: #e225e5;
+  }
+}
+
+@keyframes changeColor {
+  0% {
+    color: #e225e5;
+  }
+  20% {
+    color: #c90d0d;
+  }
+  40% {
+    color: #ffd84d;
+  }
+  60% {
+    color: #0dc941;
+  }
+  80% {
+    color: #57a4ff;
+  }
+  100% {
+    color: #e225e5;
+  }
 }
 
 /* SPACING & ACCENTS */
