--- a/styles/index.css
+++ b/styles/index.css
@@ -66,7 +66,7 @@ img {
   max-width: 100%;
 }
 
-/* LINKS */
+/*========== LINKS ==========*/
 nav a {
   margin-right: 77px;
 }
@@ -180,68 +180,7 @@ a:focus .underline-mask,
   background-size: 0 100%;
 }
 
-.star {
-  position: absolute;
-  z-index: -1;
-  font-family: "Prosto One", "Inconsolata", courier-std, Courier;
-  font-size: 32px;
-  cursor: pointer;
-}
-
-.rainbow {
-  -webkit-animation: changeColor ease-in-out;
-          animation: changeColor ease-in-out;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  -webkit-animation-duration: 10s;
-          animation-duration: 10s;
-  -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
-}
-
-@-webkit-keyframes changeColor {
-  0% {
-    color: #e225e5;
-  }
-  20% {
-    color: #c90d0d;
-  }
-  40% {
-    color: #ffd84d;
-  }
-  60% {
-    color: #0dc941;
-  }
-  80% {
-    color: #57a4ff;
-  }
-  100% {
-    color: #e225e5;
-  }
-}
-
-@keyframes changeColor {
-  0% {
-    color: #e225e5;
-  }
-  20% {
-    color: #c90d0d;
-  }
-  40% {
-    color: #ffd84d;
-  }
-  60% {
-    color: #0dc941;
-  }
-  80% {
-    color: #57a4ff;
-  }
-  100% {
-    color: #e225e5;
-  }
-}
-
-/* SPACING & ACCENTS */
+/*========== SPACING & ACCENTS ==========*/
 .large-block-space {
   margin-bottom: 62px;
 }
@@ -274,9 +213,359 @@ a:focus .underline-mask,
   color: #57a4ff;
 }
 
-/* PROJECT SORTING */
+/*========== PROJECT SORTING ==========*/
 .hidden {
   display: none;
+}
+
+/*========== STARS ==========*/
+.star {
+  position: absolute;
+  z-index: -1;
+  font-family: "Prosto One", "Inconsolata", courier-std, Courier;
+  font-size: 32px;
+  cursor: pointer;
+  -webkit-animation: changeColor ease-in-out;
+          animation: changeColor ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-duration: 6s;
+          animation-duration: 6s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.star.pink {
+  -webkit-animation: changeColorFromPink ease-in-out;
+          animation: changeColorFromPink ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-duration: 6s;
+          animation-duration: 6s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.star.red {
+  -webkit-animation: changeColorFromRed ease-in-out;
+          animation: changeColorFromRed ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-duration: 6s;
+          animation-duration: 6s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.star.yellow {
+  -webkit-animation: changeColorFromYellow ease-in-out;
+          animation: changeColorFromYellow ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-duration: 6s;
+          animation-duration: 6s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.star.green {
+  -webkit-animation: changeColorFromGreen ease-in-out;
+          animation: changeColorFromGreen ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-duration: 6s;
+          animation-duration: 6s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.star.blue {
+  -webkit-animation: changeColorFromBlue ease-in-out;
+          animation: changeColorFromBlue ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-duration: 6s;
+          animation-duration: 6s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.paused {
+  -webkit-animation-play-state: paused !important;
+  animation-play-state: paused !important;
+}
+
+@-webkit-keyframes changeColor {
+  0% {
+    color: inherit;
+  }
+  20% {
+    color: #c90d0d;
+  }
+  40% {
+    color: #ffd84d;
+  }
+  60% {
+    color: #0dc941;
+  }
+  80% {
+    color: #57a4ff;
+  }
+  100% {
+    color: inherit;
+  }
+}
+
+@keyframes changeColor {
+  0% {
+    color: inherit;
+  }
+  20% {
+    color: #c90d0d;
+  }
+  40% {
+    color: #ffd84d;
+  }
+  60% {
+    color: #0dc941;
+  }
+  80% {
+    color: #57a4ff;
+  }
+  100% {
+    color: inherit;
+  }
+}
+
+@keyframes changeColor {
+  0% {
+    color: inherit;
+  }
+  20% {
+    color: #c90d0d;
+  }
+  40% {
+    color: #ffd84d;
+  }
+  60% {
+    color: #0dc941;
+  }
+  80% {
+    color: #57a4ff;
+  }
+  100% {
+    color: inherit;
+  }
+}
+
+@-webkit-keyframes changeColorFromPink {
+  0% {
+    color: #e225e5;
+  }
+  20% {
+    color: #c90d0d;
+  }
+  40% {
+    color: #ffd84d;
+  }
+  60% {
+    color: #0dc941;
+  }
+  80% {
+    color: #57a4ff;
+  }
+  100% {
+    color: #e225e5;
+  }
+}
+
+@keyframes changeColorFromPink {
+  0% {
+    color: #e225e5;
+  }
+  20% {
+    color: #c90d0d;
+  }
+  40% {
+    color: #ffd84d;
+  }
+  60% {
+    color: #0dc941;
+  }
+  80% {
+    color: #57a4ff;
+  }
+  100% {
+    color: #e225e5;
+  }
+}
+
+@-webkit-keyframes changeColorFromRed {
+  0% {
+    color: #c90d0d;
+  }
+  20% {
+    color: #ffd84d;
+  }
+  40% {
+    color: #0dc941;
+  }
+  60% {
+    color: #57a4ff;
+  }
+  80% {
+    color: #e225e5;
+  }
+  100% {
+    color: #c90d0d;
+  }
+}
+
+@keyframes changeColorFromRed {
+  0% {
+    color: #c90d0d;
+  }
+  20% {
+    color: #ffd84d;
+  }
+  40% {
+    color: #0dc941;
+  }
+  60% {
+    color: #57a4ff;
+  }
+  80% {
+    color: #e225e5;
+  }
+  100% {
+    color: #c90d0d;
+  }
+}
+
+@-webkit-keyframes changeColorFromYellow {
+  0% {
+    color: #ffd84d;
+  }
+  20% {
+    color: #0dc941;
+  }
+  40% {
+    color: #57a4ff;
+  }
+  60% {
+    color: #e225e5;
+  }
+  80% {
+    color: #c90d0d;
+  }
+  100% {
+    color: #ffd84d;
+  }
+}
+
+@keyframes changeColorFromYellow {
+  0% {
+    color: #ffd84d;
+  }
+  20% {
+    color: #0dc941;
+  }
+  40% {
+    color: #57a4ff;
+  }
+  60% {
+    color: #e225e5;
+  }
+  80% {
+    color: #c90d0d;
+  }
+  100% {
+    color: #ffd84d;
+  }
+}
+
+@-webkit-keyframes changeColorFromGreen {
+  0% {
+    color: #0dc941;
+  }
+  20% {
+    color: #57a4ff;
+  }
+  40% {
+    color: #e225e5;
+  }
+  60% {
+    color: #c90d0d;
+  }
+  80% {
+    color: #ffd84d;
+  }
+  100% {
+    color: #0dc941;
+  }
+}
+
+@keyframes changeColorFromGreen {
+  0% {
+    color: #0dc941;
+  }
+  20% {
+    color: #57a4ff;
+  }
+  40% {
+    color: #e225e5;
+  }
+  60% {
+    color: #c90d0d;
+  }
+  80% {
+    color: #ffd84d;
+  }
+  100% {
+    color: #0dc941;
+  }
+}
+
+@-webkit-keyframes changeColorFromBlue {
+  0% {
+    color: #57a4ff;
+  }
+  20% {
+    color: #e225e5;
+  }
+  40% {
+    color: #c90d0d;
+  }
+  60% {
+    color: #ffd84d;
+  }
+  80% {
+    color: #0dc941;
+  }
+  100% {
+    color: #57a4ff;
+  }
+}
+
+@keyframes changeColorFromBlue {
+  0% {
+    color: #57a4ff;
+  }
+  20% {
+    color: #e225e5;
+  }
+  40% {
+    color: #c90d0d;
+  }
+  60% {
+    color: #ffd84d;
+  }
+  80% {
+    color: #0dc941;
+  }
+  100% {
+    color: #57a4ff;
+  }
 }
 
 @media only screen and (max-width: 1280px) {
