--- a/styles/index.css
+++ b/styles/index.css
@@ -22,6 +22,8 @@ html {
 
 body {
   background-color: #080808;
+  -webkit-transition: margin 1s ease-in-out;
+  transition: margin 1s ease-in-out;
   margin-left: 280px;
   margin-right: 280px;
   margin-top: 200px;
