--- a/styles/index.scss
+++ b/styles/index.scss
@@ -41,6 +41,8 @@ body {
   background-color: $background-color;
   // margin: 280px 5% 4% 5%;
 
+  transition: margin 1s ease-in-out;
+
   margin: {
     left: 280px;
     right: 280px;
