--- a/styles/index.scss
+++ b/styles/index.scss
@@ -169,7 +169,7 @@ a {
   transition: background-size 0.6s ease;
 }
 .long-animation {
-  transition: background-size 1.2s ease;
+  transition: background-size 0.8s ease;
 }
 
 .screenreader-text {
@@ -186,6 +186,10 @@ footer {
     display: inline-block;
     margin-bottom: $small-space;
   }
+}
+
+a:focus .underline-perm {
+  background-position: 2px 1.5em;
 }
 
 .underline-perm {
